# sensing-dev-installer

./: .gitignore  .gitmodules  README.md
.github/composite-actions/setup-environment/: action.yml
.github/workflows/: Aravis-MSVC.yml  AravisConanCenter-MSVC.yml  Release-MSVC.yml  Test-Release.yml  Windows-Settings.yml  develop-MSVC.yml  setup-environment.yml
installer/: CMakeLists.txt  conan_profile  conanfile.py  conanfile.txt  conanfile_aravis .py  config.yml  requirements.txt
installer/cmake/: AppendLicenses.cmake  CPackConfig.cmake
installer/external_/: config.yml
installer/subprojects/: aravis.wrap  pygproject.wrap
installer/tests/: sensing_dev_test.py
installer/tools/: Env.ps1  build-Aravis.ps1  build-Pygobject.ps1  build-pygobject.bat  installer.ps1  setup.sh  uninstaller.ps1  unsetEnv.ps1
installer/tools/build_support/: parse_config.py
